Add new organizers

--- a/organization.html
+++ b/organization.html
@@ -208,7 +208,17 @@
                     </div>
 
                     <div class="row" style="justify-content: center">
-                        <!-- Segunda linha -->
+                        <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+                            <div class="member">
+                                <img src="assets/img/team/Glaucia-UFV.jpg" class="img-fluid" alt="Avatar">
+                                <div class="member-info">
+                                    <div class="member-info-content">
+                                        <h4>Gláucia Braga e Silva</h4>
+                                        <span>UFV</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
                             <div class="member">
                                 <img src="assets/img/team/Glivia-CEFET.jpg" class="img-fluid" alt="Avatar">
@@ -232,8 +242,21 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="row" style="justify-content: center">
+                        <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+                            <div class="member">
+                                <img src="assets/img/team/MariaAmelia-UFV.png" class="img-fluid" alt="Avatar">
+                                <div class="member-info">
+                                    <div class="member-info-content">
+                                        <h4>Maria Amélia Lopes Silva</h4>
+                                        <span>UFV</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
-                        <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+                        <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
                             <div class="member">
                                 <img src="assets/img/team/MichelleHanne-PUCMinas.jpg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
@@ -244,10 +267,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="row" style="justify-content: center">
-                        <!-- Terceira linha -->
+                        
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
                             <div class="member">
                                 <img src="assets/img/team/Silvia-CEFET.jpg" class="img-fluid" alt="Avatar">
@@ -259,8 +279,10 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
 
-                        <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="row" style="justify-content: center">
+                        <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
                             <div class="member">
                                 <img src="assets/img/team/Thabata-CEFET.jpg" class="img-fluid" alt="Avatar">
                                 <div class="member-info">
@@ -271,13 +293,35 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+                            <div class="member">
+                                <img src="assets/img/team/Thais-UFV.jpeg" class="img-fluid" alt="Avatar">
+                                <div class="member-info">
+                                    <div class="member-info-content">
+                                        <h4>Thaís Regina de Moura Braga</h4>
+                                        <span>UFV</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+                            <div class="member">
+                                <img src="assets/img/team/ValeriaUFOP.jpg" class="img-fluid" alt="Avatar">
+                                <div class="member-info">
+                                    <div class="member-info-content">
+                                        <h4>Valéria de Carvalhos Santos</h4>
+                                        <span>UFOP</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
 
-            <div style="text-align: center; font-size: 12px; margin-bottom: 20px;">
+            <!-- <div style="text-align: center; font-size: 12px; margin-bottom: 20px;">
                 Crédito da imagem: <a href='https://pt.pngtree.com/freepng/female-user-vector-avatar-icon_4005060.html'>pngtree.com</a>
-            </div>
+            </div> -->
         </main>
 
         <!-- ======= Footer ======= -->
