Adjust name organization

--- a/organization.html
+++ b/organization.html
@@ -145,7 +145,7 @@
             <section id="organizing" class="team">
                 <div class="container">
                     <div class="section-title" data-aos="fade-up">
-                        <p>Coordenação Geral</p>
+                        <p>Coordenação Geral e do Comitê de Programa</p>
                     </div>
 
                     <!-- Coordenação Geral -->
@@ -165,7 +165,7 @@
 
                     <!-- Comitê Organizador -->
                     <div class="section-title" data-aos="fade-up">
-                        <p>Comitê Organizador</p>
+                        <p>Comitê de programa</p>
                     </div>
 
                     <div class="row" style="justify-content: center">
@@ -267,7 +267,7 @@
                                 </div>
                             </div>
                         </div>
-                        
+
                         <div class="col-xl-3 col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
                             <div class="member">
                                 <img src="assets/img/team/Silvia-CEFET.jpg" class="img-fluid" alt="Avatar">
