Include home information

--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
                                     text-justify: inter-word;
                                 "
                             >
-                                O Encontro Mineiro de Mulheres na Computação é um evento regional que reúne estudantes, pesquisadoras e profissionais da área de Computação do estado de Minas Gerais, visando incentivar e apoiar a participação feminina na Computação no estado. O evento tem por objetivo divulgar a participação feminina na Computação, especificamente a de mulheres que atuam em Minas Gerais, bem como divulgar e discutir políticas e ações que visem promover a inclusão de gênero na área de Computação no estado.
+                                O Encontro Mineiro de Mulheres na Computação é um evento regional que reúne estudantes, pesquisadoras e profissionais da área de Computação do estado de Minas Gerais, visando incentivar e apoiar a participação feminina na Computação no estado. O evento tem por objetivo divulgar a participação feminina na Computação, especificamente a de mulheres que atuam em Minas Gerais, bem como divulgar e discutir políticas e ações que visem promover a inclusão de gênero na área de Computação no estado. Em 2025 será realizada a primeira edição do evento, que terá ocorrência bienal.
                                 <br><br>
                                 O evento promove:
                                 <ul style="font-size: 1.1em; color: rgb(90, 101, 112);">
                                     <li>Divulgação de trabalhos realizados por pesquisadoras mineiras na área de Computação.</li>
                                     <li>Divulgação de atuação de lideranças femininas na área de Computação em Minas Gerais.</li>
-                                    <li>Palestras, painéis e mesas-redondas sobre políticas e ações para inclusão feminina na área de Computação em Minas Gerais.</li>
+                                    <li>Palestras, painéis e mesas-redondas sobre políticas e ações para inclusão de gênero e sobre a atuação feminina na área de Computação em Minas Gerais.</li>
                                     <li>Oficinas e minicursos.</li>
                                 </ul>
                             </p>
@@ -192,7 +192,66 @@
                     </div>
                 </div>
             </section>
+            <section class="about">
+                <div class="container">
+                    <div class="row justify-content-between">
+                        <div class="col-lg-12 pt-5 pt-lg-0">
+                            <h3 data-aos="fade-up">Público alvo</h3>
+                            <p
+                                style="
+                                    text-align: justify;
+                                    text-justify: inter-word;
+                                "
+                            >
+
+                            Mulheres, cis ou trans, que sejam estudantes, pesquisadoras e profissionais da área de Computação do estado de Minas Gerais
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="about">
+                <div class="container">
+                    <div class="row justify-content-between">
+                        <div class="col-lg-12 pt-5 pt-lg-0">
+                            <h3 data-aos="fade-up">Data</h3>
+                            <p
+                                style="
+                                    text-align: justify;
+                                    text-justify: inter-word;
+                                "
+                            >
+
+                            <strong>Data:</strong> 28 de novembro de 2025
+                            <br><strong>Horário:</strong> 8h às 18h
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="about">
+                <div class="container">
+                    <div class="row justify-content-between">
+                        <div class="col-lg-12 pt-5 pt-lg-0">
+                            <h3 data-aos="fade-up">Local</h3>
+                            <p
+                                style="
+                                    text-align: justify;
+                                    text-justify: inter-word;
+                                "
+                            >
+                            Auditório Central <br> Centro Federal de Educação Tecnológica de Minas Gerais (CEFET-MG). <br> Av. Amazonas, 5253, B. Nova Suíça.<br> 30421-169 Belo Horizonte - MG. 
+                            </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="map"></div>
+            </section>
             <!-- End About Section -->
+             
         </main>
         <!-- End #main -->
 
