--- a/callForPapers.html
+++ b/callForPapers.html
@@ -82,6 +82,32 @@
         <div class="row">
           <h1 class="d-flex justify-content-center">A ser anunciado</h1>
         </div>
+
+
+       <div class="row" style="justify-content: center;">
+          <div class="container_center">
+            <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
+              <div class="">
+                <h3 style="color: #4e4039;"><b>Tipos de Trabalhos</b></h3>
+                <br>
+                <p style="text-align: justify;">
+                  A Mostra de Produção Técnico-Científica Feminina Mineira em Computação do I Encontro Mineiro de Mulheres na Computação apresentará trabalhos realizados por mulheres, incluindo mulheres trans, na área de Computação e que tenham sido realizados em qualquer instituição de ensino técnico e superior de Minas Gerais
+                </p>
+                <br>
+                <p style="text-align: justify;"></p>
+                  São aceitos trabalhos nas seguintes categorias: doutorado, mestrado, iniciação científica, trabalhos de conclusão de curso e projetos de extensão.
+                </p>
+                <br>
+                <p style="text-align: justify;"></p>
+                  Os trabalhos serão apresentados na forma de pôsteres presencialmente durante o Encontro Mineiro de Mulheres na Computação e seus resumos serão divulgados no caderno de resumos do evento.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        
+        
       </div>
     </section><!-- End Services Section -->
   </main><!-- End #main -->
