--- a/callForPapers.html
+++ b/callForPapers.html
@@ -93,18 +93,64 @@
                 <p style="text-align: justify;">
                   A Mostra de Produção Técnico-Científica Feminina Mineira em Computação do I Encontro Mineiro de Mulheres na Computação apresentará trabalhos realizados por mulheres, incluindo mulheres trans, na área de Computação e que tenham sido realizados em qualquer instituição de ensino técnico e superior de Minas Gerais
                 </p>
-                <br>
-                <p style="text-align: justify;"></p>
+                <p style="text-align: justify;">
                   São aceitos trabalhos nas seguintes categorias: doutorado, mestrado, iniciação científica, trabalhos de conclusão de curso e projetos de extensão.
                 </p>
-                <br>
-                <p style="text-align: justify;"></p>
+                <p style="text-align: justify;">
                   Os trabalhos serão apresentados na forma de pôsteres presencialmente durante o Encontro Mineiro de Mulheres na Computação e seus resumos serão divulgados no caderno de resumos do evento.
                 </p>
               </div>
             </div>
           </div>
         </div>
+
+
+      <div class="row" style="justify-content: center;">
+          <div class="container_center">
+            <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
+              <div class="">
+                <h3 style="color: #4e4039;"><b>Datas Importantes</b></h3>
+                <br>
+                <p><b>Todas as datas se referem a 23:59:59
+                  <a title="Anywhere on Earth" href="https://www.timeanddate.com/time/zones/aoe" target="_blank">
+                AoE</a>.</b></p>
+                <div class="row schedule-item">
+              <div class="col-md-4">
+                <p>Submissão do trabalho</p>
+              </div>
+              <div class="col-md-4">
+                <p><strong> 31/10/2025</strong></p>
+              </div>
+            </div>
+            <div class="row schedule-item">
+              <div class="col-md-4">
+                <p>Notificação para as autoras</p>
+              </div>
+              <div class="col-md-4">
+                <p>07/11/2025</p>
+              </div>
+            </div>
+            <div class="row schedule-item">
+              <div class="col-md-4">
+                <p>Envio da versão final</p>
+              </div>
+              <div class="col-md-4">
+                <p>14/11/2025</p>
+              </div>
+            </div>
+            <div class="row schedule-item">
+              <div class="col-md-4">
+                <p>Data da apresentação</p>
+              </div>
+              <div class="col-md-4">
+                <p>28/11/2025</p>
+              </div>
+            </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
 
         
         
