--- a/callForPapers.html
+++ b/callForPapers.html
@@ -79,11 +79,6 @@
           <p>Chamada de Trabalhos</p>
         </div>
 
-        <div class="row">
-          <h1 class="d-flex justify-content-center">A ser anunciado</h1>
-        </div>
-
-
        <div class="row" style="justify-content: center;">
           <div class="container_center">
             <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
@@ -103,28 +98,22 @@
             </div>
           </div>
         </div>
-
-
-      <div class="row" style="justify-content: center;">
+       <br><br>
+       <div class="row" style="justify-content: center;">
           <div class="container_center">
             <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
               <div class="">
-                <h3 style="color: #4e4039;"><b>Datas Importantes</b></h3>
-                <br>
-                <p><b>Todas as datas se referem a 23:59:59
-                  <a title="Anywhere on Earth" href="https://www.timeanddate.com/time/zones/aoe" target="_blank">
-                AoE</a>.</b></p>
                 <div class="row schedule-item">
               <div class="col-md-4">
                 <p>Submissão do trabalho</p>
               </div>
               <div class="col-md-4">
-                <p><strong> 31/10/2025</strong></p>
+                <p>31/10/20255</p>
               </div>
             </div>
             <div class="row schedule-item">
               <div class="col-md-4">
-                <p>Notificação para as autoras</p>
+                <p>Resposta para as autoras</p>
               </div>
               <div class="col-md-4">
                 <p>07/11/2025</p>
@@ -132,7 +121,7 @@
             </div>
             <div class="row schedule-item">
               <div class="col-md-4">
-                <p>Envio da versão final</p>
+                <p>Versão final</p>
               </div>
               <div class="col-md-4">
                 <p>14/11/2025</p>
@@ -140,7 +129,7 @@
             </div>
             <div class="row schedule-item">
               <div class="col-md-4">
-                <p>Data da apresentação</p>
+                <p>Data do evento</p>
               </div>
               <div class="col-md-4">
                 <p>28/11/2025</p>
@@ -150,8 +139,6 @@
             </div>
           </div>
         </div>
-
-
         
         
       </div>
