--- a/callForPapers.html
+++ b/callForPapers.html
@@ -100,10 +100,12 @@
         </div>
        <br><br>
        <div class="row" style="justify-content: center;">
-          <div class="container_center">
-            <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
-              <div class="">
-                <div class="row schedule-item">
+        <div class="container_center">
+         <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
+          <div class="">
+            <h3 style="color: #4e4039;"><b>Datas Importantes</b></h3>
+            <br>
+            <div class="row schedule-item">
               <div class="col-md-4">
                 <p>Submissão do trabalho</p>
               </div>
@@ -138,8 +140,36 @@
               </div>
             </div>
           </div>
+       </div>
+       <br><br>
+       <div class="row" style="justify-content: center;">
+          <div class="container_center">
+            <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
+              <div class="">
+                <h3 style="color: #4e4039;"><b>Requisitos para a Submissão do Trabalho</b></h3>
+                <br>
+                <p style="text-align: justify;">
+                  Poderão ser submetidos trabalhos de doutorado, mestrado, iniciação científica, trabalhos de conclusão de curso ou extensão que tenham como autora principal uma mulher que seja docente, pesquisadora ou estudante de qualquer instituição de ensino técnico ou superior de Minas Gerais, pública ou privada. 
+                </p>
+                <p style="text-align: justify;">
+                  Serão considerados para a apresentação trabalhos que tenham sido concluídos em 2024 ou em 2025, ou que estejam em andamento, com previsão de conclusão em 2025 ou 2026.
+                </p>
+                <p style="text-align: justify;">
+                  No ato da submissão, a autora deverá:
+                </p>
+                <ul>
+                  <li class="item-orange">
+                    selecionar a categoria do trabalho (doutorado, mestrado, iniciação científica, trabalhos de conclusão de curso ou extensão) e a situação do trabalho (concluído em 2024/2025 ou com previsão de conclusão em 2025/2026);
+                  </li>
+                  <li class="item-orange">
+                    informar um resumo de 200 a 300 palavras do trabalho.
+                  </li>
+                </ul>>
+              </div>
+            </div>
+          </div>
         </div>
-        
+       <br><br>        
         
       </div>
     </section><!-- End Services Section -->
