--- a/callForPapers.html
+++ b/callForPapers.html
@@ -164,13 +164,32 @@
                   <li class="item-orange">
                     informar um resumo de 200 a 300 palavras do trabalho.
                   </li>
-                </ul>>
+                </ul>
               </div>
             </div>
           </div>
         </div>
        <br><br>        
-        
+       <div class="row" style="justify-content: center;">
+          <div class="container_center">
+            <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
+              <div class="">
+                <h3 style="color: #4e4039;"><b>Orientações para a Submissão do Trabalho</b></h3>
+                <br>
+                <p style="text-align: justify;">
+                  Os trabalhos poderão ser escritos em Português ou Inglês.
+                </p>
+                <p style="text-align: justify;">
+                  O trabalho deverá ser submetido em formato PDF na forma de pôster, conforme o modelo disponível em:  <a href="https://acesse.one/oN3Syr" target="_blank">pôster</a>. 
+                 </p>
+                <p style="text-align: justify;">
+                  A submissão deverá ser realizada eletronicamente em <a href="https://jems3.sbc.org.br/emmcomp2025" target="_blank">JEMS</a>.
+                </p>
+                
+              </div>
+            </div>
+          </div>
+        </div> 
       </div>
     </section><!-- End Services Section -->
   </main><!-- End #main -->
