--- a/callForPapers.html
+++ b/callForPapers.html
@@ -146,7 +146,7 @@
           <div class="container_center">
             <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
               <div class="">
-                <h3 style="color: #4e4039;"><b>Requisitos para a Submissão do Trabalho</b></h3>
+                <h3 style="color: #4e4039;"><b>Orientações para a Submissão do Trabalho</b></h3>
                 <br>
                 <p style="text-align: justify;">
                   Poderão ser submetidos trabalhos de doutorado, mestrado, iniciação científica, trabalhos de conclusão de curso ou extensão que tenham como autora principal uma mulher que seja docente, pesquisadora ou estudante de qualquer instituição de ensino técnico ou superior de Minas Gerais, pública ou privada. 
@@ -165,32 +165,20 @@
                     informar um resumo de 200 a 300 palavras do trabalho.
                   </li>
                 </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-       <br><br>        
-       <div class="row" style="justify-content: center;">
-          <div class="container_center">
-            <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
-              <div class="">
-                <h3 style="color: #4e4039;"><b>Orientações para a Submissão do Trabalho</b></h3>
-                <br>
                 <p style="text-align: justify;">
                   Os trabalhos poderão ser escritos em Português ou Inglês.
                 </p>
                 <p style="text-align: justify;">
-                  O trabalho deverá ser submetido em formato PDF na forma de pôster, conforme o modelo disponível em:  <a href="https://acesse.one/oN3Syr" target="_blank">pôster</a>. 
+                  O trabalho deverá ser submetido em formato PDF na forma de pôster, conforme o modelo disponível em:  <a href="https://docs.google.com/presentation/d/1nFfYnezgfmqZGRRzSjwmBvv-Jk3FACr7/edit?usp=drive_link&ouid=105719058493585159441&rtpof=true&sd=true" target="_blank">pôster</a>. 
                  </p>
                 <p style="text-align: justify;">
                   A submissão deverá ser realizada eletronicamente em <a href="https://jems3.sbc.org.br/emmcomp2025" target="_blank">JEMS</a>.
                 </p>
-                
               </div>
             </div>
           </div>
-        </div> 
-      </div>
+        </div>
+
     </section><!-- End Services Section -->
   </main><!-- End #main -->
 
