--- a/callForPapers.html
+++ b/callForPapers.html
@@ -146,6 +146,65 @@
           <div class="container_center">
             <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
               <div class="">
+                <h3 style="color: #4e4039;"><b>Open Science Policy</b></h3>
+                <br>
+                <p style="text-align: justify;">
+                  Openness in science is the key to fostering progress via transparency, reproducibility, and replicability. Ideally, all research output should be accessible to the public, and all empirical studies should be reproducible. VEM 2025 encourages authors to disclose: 1) the source code of relevant software used or proposed in the paper, including that used to retrieve and analyze data, 2) the data used and/or produced in the paper, and 3) instructions for other researchers describing how to reproduce or replicate the results.
+                </p>
+                <br><br>
+                <h3 style="color: #4e4039;"><b>Important Dates</b></h3>
+                <br>
+                <p><b>All dates refer to midnight 23:59:59
+                  <a title="Anywhere on Earth" href="https://www.timeanddate.com/time/zones/aoe" target="_blank">
+                AoE</a>.</b></p>
+                <div class="row schedule-item">
+              <div class="col-md-4">
+                <p>Paper registration</p>
+              </div>
+              <div class="col-md-4">
+                <p><del>(June 30, 2025)</del><strong> July 4, 2025</strong></p>
+              </div>
+            </div>
+            <div class="row schedule-item">
+              <div class="col-md-4">
+                <p>Paper submission</p>
+              </div>
+              <div class="col-md-4">
+                <p><strong>July 04, 2025</strong></p>
+              </div>
+            </div>
+            <div class="row schedule-item">
+              <div class="col-md-4">
+                <p>Author notification</p>
+              </div>
+              <div class="col-md-4">
+                <p>August 4, 2025</p>
+              </div>
+            </div>
+            <div class="row schedule-item">
+              <div class="col-md-4">
+                <p>Camera-ready</p>
+              </div>
+              <div class="col-md-4">
+                <p>August 11, 2025</p>
+              </div>
+            </div>
+            <div class="row schedule-item">
+              <div class="col-md-4">
+                <p>Workshop date</p>
+              </div>
+              <div class="col-md-4">
+                <p>September 22, 2025</p>
+              </div>
+            </div>
+              </div>
+            </div>
+          </div>
+       </div>
+       <div class="row" style="justify-content: center;">
+          <div class="container_center">
+            <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
+              <div class="">
                 <h3 style="color: #4e4039;"><b>Orientações para a Submissão do Trabalho</b></h3>
                 <br>
                 <p style="text-align: justify;">
