--- a/callForPapers.html
+++ b/callForPapers.html
@@ -100,59 +100,21 @@
         </div>
        <br><br>
        <div class="row" style="justify-content: center;">
-        <div class="container_center">
-         <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
-          <div class="">
-            <h3 style="color: #4e4039;"><b>Datas Importantes</b></h3>
-            <br>
-            <div class="row schedule-item">
-              <div class="col-md-4">
-                <p>Submissão do trabalho</p>
-              </div>
-              <div class="col-md-4">
-                <p>31/10/20255</p>
-              </div>
-            </div>
-            <div class="row schedule-item">
-              <div class="col-md-4">
-                <p>Resposta para as autoras</p>
-              </div>
-              <div class="col-md-4">
-                <p>07/11/2025</p>
-              </div>
-            </div>
-            <div class="row schedule-item">
-              <div class="col-md-4">
-                <p>Versão final</p>
-              </div>
-              <div class="col-md-4">
-                <p>14/11/2025</p>
-              </div>
-            </div>
-            <div class="row schedule-item">
-              <div class="col-md-4">
-                <p>Data do evento</p>
-              </div>
-              <div class="col-md-4">
-                <p>28/11/2025</p>
-              </div>
-            </div>
-              </div>
-            </div>
-          </div>
-       </div>
-       <br><br>
-       <div class="row" style="justify-content: center;">
           <div class="container_center">
             <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
               <div class="">
-                <h3 style="color: #4e4039;"><b>Open Science Policy</b></h3>
+                <h3 style="color: #4e4039;"><b>Autoria dos Trabalhos</b></h3>
                 <br>
                 <p style="text-align: justify;">
-                  Openness in science is the key to fostering progress via transparency, reproducibility, and replicability. Ideally, all research output should be accessible to the public, and all empirical studies should be reproducible. VEM 2025 encourages authors to disclose: 1) the source code of relevant software used or proposed in the paper, including that used to retrieve and analyze data, 2) the data used and/or produced in the paper, and 3) instructions for other researchers describing how to reproduce or replicate the results.
+                  Poderão ser submetidos trabalhos de doutorado, mestrado, iniciação científica, trabalhos de conclusão de curso ou extensão que tenham como autora uma mulher que seja docente, pesquisadora ou estudante de qualquer instituição de ensino técnico ou superior de Minas Gerais, pública ou privada.
                 </p>
+                <p style="text-align: justify;">
+                  Serão considerados para a apresentação trabalhos que tenham sido concluídos em 2024 ou em 2025, ou que estejam em andamento, com previsão de conclusão em 2025 ou 2026.
+                </p>
+
+                
                 <br><br>
-                <h3 style="color: #4e4039;"><b>Important Dates</b></h3>
+                <h3 style="color: #4e4039;"><b>Datas Importantes</b></h3>
                 <br>
                 <p><b>All dates refer to midnight 23:59:59
                   <a title="Anywhere on Earth" href="https://www.timeanddate.com/time/zones/aoe" target="_blank">
@@ -201,18 +163,13 @@
             </div>
           </div>
        </div>
+       <br><br> 
        <div class="row" style="justify-content: center;">
           <div class="container_center">
             <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
               <div class="">
                 <h3 style="color: #4e4039;"><b>Orientações para a Submissão do Trabalho</b></h3>
                 <br>
-                <p style="text-align: justify;">
-                  Poderão ser submetidos trabalhos de doutorado, mestrado, iniciação científica, trabalhos de conclusão de curso ou extensão que tenham como autora principal uma mulher que seja docente, pesquisadora ou estudante de qualquer instituição de ensino técnico ou superior de Minas Gerais, pública ou privada. 
-                </p>
-                <p style="text-align: justify;">
-                  Serão considerados para a apresentação trabalhos que tenham sido concluídos em 2024 ou em 2025, ou que estejam em andamento, com previsão de conclusão em 2025 ou 2026.
-                </p>
                 <p style="text-align: justify;">
                   No ato da submissão, a autora deverá:
                 </p>
