--- a/callForPapers.html
+++ b/callForPapers.html
@@ -116,47 +116,39 @@
                 <br><br>
                 <h3 style="color: #4e4039;"><b>Datas Importantes</b></h3>
                 <br>
-                <p><b>All dates refer to midnight 23:59:59
+                <p><b>Todas as datas se referem a 23:59:59
                   <a title="Anywhere on Earth" href="https://www.timeanddate.com/time/zones/aoe" target="_blank">
                 AoE</a>.</b></p>
                 <div class="row schedule-item">
               <div class="col-md-4">
-                <p>Paper registration</p>
+                <p>Envio do trabalho</p>
               </div>
               <div class="col-md-4">
-                <p><del>(June 30, 2025)</del><strong> July 4, 2025</strong></p>
-              </div>
-            </div>
-            <div class="row schedule-item">
-              <div class="col-md-4">
-                <p>Paper submission</p>
-              </div>
-              <div class="col-md-4">
-                <p><strong>July 04, 2025</strong></p>
+                <p><strong> 31/10/2025</strong></p>
               </div>
             </div>
             <div class="row schedule-item">
               <div class="col-md-4">
-                <p>Author notification</p>
+                <p>Resposta</p>
               </div>
               <div class="col-md-4">
-                <p>August 4, 2025</p>
-              </div>
-            </div>
-            <div class="row schedule-item">
-              <div class="col-md-4">
-                <p>Camera-ready</p>
-              </div>
-              <div class="col-md-4">
-                <p>August 11, 2025</p>
+                <p>07/11/2025</p>
               </div>
             </div>
             <div class="row schedule-item">
               <div class="col-md-4">
-                <p>Workshop date</p>
+                <p>Envio da versão final</p>
               </div>
               <div class="col-md-4">
-                <p>September 22, 2025</p>
+                <p>14/11/2025</p>
+              </div>
+            </div>
+            <div class="row schedule-item">
+              <div class="col-md-4">
+                <p>Data do evento</p>
+              </div>
+              <div class="col-md-4">
+                <p>28/11/2025</p>
               </div>
             </div>
               </div>
