--- a/callForPapers.html
+++ b/callForPapers.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>EMMC 2025</title>
+  <title>EMMComp 2025</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -86,7 +86,7 @@
                 <h3 style="color: #4e4039;"><b>Tipos de Trabalhos</b></h3>
                 <br>
                 <p style="text-align: justify;">
-                  A Mostra de Produção Técnico-Científica Feminina Mineira em Computação do I Encontro Mineiro de Mulheres na Computação apresentará trabalhos realizados por mulheres, incluindo mulheres trans, na área de Computação e que tenham sido realizados em qualquer instituição de ensino técnico e superior de Minas Gerais
+                  A Mostra de Produção Técnico-Científica Feminina Mineira em Computação do Encontro Mineiro de Mulheres na Computação apresentará trabalhos realizados por mulheres, incluindo mulheres trans, na área de Computação e que tenham sido realizados em qualquer instituição de ensino técnico e superior de Minas Gerais
                 </p>
                 <p style="text-align: justify;">
                   São aceitos trabalhos nas seguintes categorias: doutorado, mestrado, iniciação científica, trabalhos de conclusão de curso e projetos de extensão.
@@ -103,7 +103,7 @@
           <div class="container_center">
             <div class="box_center" style="margin-left: 8%; margin-right: 8%;">
               <div class="">
-                <h3 style="color: #4e4039;"><b>Autoria dos Trabalhos</b></h3>
+                <h3 style="color: #4e4039;"><b>Autoria do Trabalho</b></h3>
                 <br>
                 <p style="text-align: justify;">
                   Poderão ser submetidos trabalhos de doutorado, mestrado, iniciação científica, trabalhos de conclusão de curso ou extensão que tenham como autora uma mulher que seja docente, pesquisadora ou estudante de qualquer instituição de ensino técnico ou superior de Minas Gerais, pública ou privada.
@@ -177,7 +177,7 @@
                   Os trabalhos poderão ser escritos em Português ou Inglês.
                 </p>
                 <p style="text-align: justify;">
-                  O trabalho deverá ser submetido em formato PDF na forma de pôster, conforme o modelo disponível em:  <a href="https://docs.google.com/presentation/d/1nFfYnezgfmqZGRRzSjwmBvv-Jk3FACr7/edit?usp=drive_link&ouid=105719058493585159441&rtpof=true&sd=true" target="_blank">pôster</a>. 
+                  Os trabalhos deverão ser submetidos em formato PDF na forma de pôster, conforme o modelo disponível em:  <a href="https://docs.google.com/presentation/d/1nFfYnezgfmqZGRRzSjwmBvv-Jk3FACr7/edit?usp=drive_link&ouid=105719058493585159441&rtpof=true&sd=true" target="_blank">pôster</a>. 
                  </p>
                 <p style="text-align: justify;">
                   A submissão deverá ser realizada eletronicamente em <a href="https://jems3.sbc.org.br/emmcomp2025" target="_blank">JEMS</a>.
