--- a/program.html
+++ b/program.html
@@ -79,9 +79,107 @@
           <p>Programação</p>
         </div>
 
-        <div class="row">
-          <h1 class="d-flex justify-content-center">A ser anunciado</h1>
+             <div class="row" style="justify-content: center;">
+        <div class="table-responsive tab-pane fade show active schedule-item">
+          <table class="table table-hover" style="background-color: white">
+            <tbody>
+
+              <tr style="background-color: #FFE4E1;">
+                <td width="15%">
+                  <i class="bi bi-clock" style="margin-right: 10px"></i>8h - 8h30
+                </td>
+                <td>
+                  <span><b>Credenciamento</b></span>
+                </td>
+              </tr>
+
+              <!-- Session 1 -->
+              <tr style="background-color: #FFE4E1; color: black">
+                <td width="15%">
+                  <i class="bi bi-clock" style="margin-right: 10px"></i>8h30 - 8h40
+                </td>
+                <td>
+                  <b>Abertura</b>
+                </td>
+              </tr>
+
+              <tr style="background-color: #FFE4E1; color: black">
+                <td width="15%">
+                  <i class="bi bi-clock" style="margin-right: 10px"></i>08h40 - 10h
+                </td>
+                <td>
+                  <i>Painel - “Liderança feminina na Computação”</i>
+                  <br>Painelistas confirmadas:
+                  <br>Luiza Pena (Gerente de Verificação Formal – Cadence Design Systems)
+                  <br>Patrícia Freitas Vitor (Gerente de TI – Bradesco Seguros)
+                </td>
+              </tr>
+
+              <tr style="background-color: rgb(248, 239, 238);">
+                <td width="15%">
+                  <i class="bi bi-cup-hot" style="margin-right: 10px"></i>10h - 10h30
+                </td>
+                <td>
+                  Coffee Break
+                </td>
+              </tr>
+
+              <!-- Session 2 -->
+              <tr style="background-color: #FFE4E1;">
+                <td width="15%">
+                  <i class="bi bi-clock" style="margin-right: 10px"></i>10h30 - 12h
+                </td>
+                <td>
+                  <i>Mesa redonda - "Ações e políticas para inclusão de gênero na Computação"</i>
+                  <br>Participantes confirmadas
+                  <br>Profª. Jussara Almeida (DCC/UFMG, representante da Sociedade Brasileira de Computação)
+                  <br>Edna Meneses (Presidente da ASSESPRO-MG)
+                </td>
+              </tr>
+
+              <tr style="background-color: rgb(248, 239, 238);">
+                <td width="15%">
+                  <i class="fas fa-utensils" style="margin-right: 10px"></i>12h - 13h30
+                </td>
+                <td>
+                  Almoço
+                </td>
+              </tr>
+
+              <tr style="background-color: #FFE4E1;">
+                <td width="15%">
+                  <i class="bi bi-clock" style="margin-right: 10px"></i>13h30 - 15h
+                </td>
+                <td>
+                  <i>Palestra integradora: “Ser Mulher na Computação - desafios e oportunidades”</i>
+                  <br>Profª. Kecia Ferreira (DECOM/CEFET-MG)
+                </td>
+              </tr>
+
+              <tr style="background-color: rgb(248, 239, 238);">
+                <td width="15%">
+                  <i class="bi bi-cup-hot" style="margin-right: 10px"></i>15h-15h30
+                </td>
+                <td>
+                  Coffee Break
+                </td>
+              </tr>
+
+              <!-- Session 3 -->
+              <tr style="background-color: #FFE4E1;">
+                <td width="15%">
+                  <i class="bi bi-clock" style="margin-right: 10px"></i>15h30 - 17h
+                </td>
+                <td>
+                  <b>Oficina/minicurso (a ser anunciado)</b>
+                </td>
+              </tr>
+
+            </tbody>
+          </table>
         </div>
+      </div>
+
       </div>
     </section><!-- End Services Section -->
   </main><!-- End #main -->
