--- a/program.html
+++ b/program.html
@@ -108,7 +108,7 @@
                   <i class="bi bi-clock" style="margin-right: 10px"></i>08h40 - 10h
                 </td>
                 <td>
-                  <i>Painel - “Liderança feminina na Computação”</i>
+                  <i><b>Painel - “Liderança feminina na Computação”</b></i>
                   <br>Painelistas confirmadas:
                   <br>Luiza Pena (Gerente de Verificação Formal – Cadence Design Systems)
                   <br>Patrícia Freitas Vitor (Gerente de TI – Bradesco Seguros)
@@ -130,7 +130,7 @@
                   <i class="bi bi-clock" style="margin-right: 10px"></i>10h30 - 12h
                 </td>
                 <td>
-                  <i>Mesa redonda - "Ações e políticas para inclusão de gênero na Computação"</i>
+                  <i><b>Mesa redonda - "Ações e políticas para inclusão de gênero na Computação"</b></i>
                   <br>Participantes confirmadas
                   <br>Profª. Jussara Almeida (DCC/UFMG, representante da Sociedade Brasileira de Computação)
                   <br>Edna Meneses (Presidente da ASSESPRO-MG)
@@ -151,7 +151,7 @@
                   <i class="bi bi-clock" style="margin-right: 10px"></i>13h30 - 15h
                 </td>
                 <td>
-                  <i>Palestra integradora: “Ser Mulher na Computação - desafios e oportunidades”</i>
+                  <i><b>Palestra integradora: “Ser mulher na Computação - desafios e oportunidades”</b></i>
                   <br>Profª. Kecia Ferreira (DECOM/CEFET-MG)
                 </td>
               </tr>
@@ -171,7 +171,7 @@
                   <i class="bi bi-clock" style="margin-right: 10px"></i>15h30 - 17h
                 </td>
                 <td>
-                  <b>Oficina/minicurso (a ser anunciado)</b>
+                  Oficina/minicurso (a ser anunciado)
                 </td>
               </tr>
 
