--- a/organization.html
+++ b/organization.html
@@ -158,7 +158,7 @@
 
                     <!-- Comitê Organizador -->
                     <div class="section-title" data-aos="fade-up">
-                        <p>Comitê de programa</p>
+                        <p>Comitê de Programa</p>
                     </div>
 
                     <div class="row" style="justify-content: center">
